infra/modules/networking/main.tf
data "aws_availability_zones" "available" {
  state = "available"
}

locals {
  azs = slice(data.aws_availability_zones.available.names, 0, var.az_count)
}

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_subnet" "public" {
    for_each = var.public_subnets

    vpc_id = aws_vpc.main.id
    cidr_block = each.value
  
    availability_zone = local.azs[index(keys(var.public_subnets), each.key) % length(local.azs)]
}

resource "aws_subnet" "private" {
    for_each = var.private_subnets

    vpc_id = aws_vpc.main.id
    cidr_block = each.value

    availability_zone = local.azs[index(keys(var.private_subnets), each.key) % length(local.azs)]
}

resource "aws_eip" "nat" {
  domain = "vpc"
}

resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.nat.id
  subnet_id = values(aws_subnet.public[0].id)
  depends_on = [ aws_internet_gateway.igw]
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route" "public" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public" {
  for_each       = aws_subnet.public
  subnet_id      = each.value.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route" "private" {
  route_table_id = aws_route_table.private
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_nat_gateway.natgw.id
}

resource "aws_route_table_association" "private" {
  for_each       = aws_subnet.private
  subnet_id      = each.value.id
  route_table_id = aws_route_table.private.id
}
